# cpa-codex-login-butler

./: .gitignore  README.md  pyproject.toml
.trellis/spec/cpa-codex-login-butler/: authentication-safety.md  index.md  repository-scope.md  verification.md
src/cpa_codex_butler/: __init__.py  cli.py
