[project]
name = "cpa-codex-login-butler"
version = "0.1.0"
description = "Local helper for managing CPA Codex OAuth re-login queues"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cpa-codex-butler = "cpa_codex_butler.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
